--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,18 @@
 {
     "name": "bb3mobi/imgposts",
     "type": "phpbb-extension",
-    "description": "Images from posts",
+    "description": "Images From Posts",
     "homepage": "http://bb3.mobi",
     "keywords": ["img", "images", "attachment", "pics", "topic", "post", "forum"],
-    "version": "1.0.5",
-    "time": "2014-11-9",
+    "version": "2.0.0",
+    "time": "2016-11-24",
     "license": "GPL-2.0",
     "authors": [
+        {
+            "name": "Leinad4Mind",
+            "homepage": "https://www.phpbb.com/community/memberlist.php?mode=viewprofile&u=610725",
+            "role": "Development"
+        },
         {
             "name": "Sheer",
             "homepage": "http://www.phpbbguru.net/community/member28906.html",
@@ -28,9 +33,9 @@
         "php": ">=5.3.3"
     },
     "extra": {
-        "display-name": "Images from posts",
+        "display-name": "Images From Posts",
         "soft-require": {
-        "phpbb/phpbb": "3.1.*@dev"
+        "phpbb/phpbb": "3.2.*@dev"
         }
     }
 }
